# rag_pdf

./: .dockerignore  .exemple-env  .gitignore  Dockerfile  Dockerfile.fastapi  Dockerfile.streamlit  README.md  docker-compose.yml  notebook.ipynb  pyproject.toml  requirements.txt
notebooks/: notebook.ipynb
src/: api.py  main_frontend.py  ollama_model.py  pdf_frontend.py  prompt_template.yml  prompt_template_chain.yml  prompt_template_tools.yml  query_data.py  query_data2.py  query_data3.py  query_data4.py  query_data5.py  query_data6.py  query_data_crewai.py  query_data_simple.py  query_data_with_tools.py  query_frontend.py  simple_frontend.py  vector_db.py
